--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,16 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
+             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
+
+          ]
           },
           "configurations": {
             "production": {
