--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@fontsource/fredoka-one": "^4.5.9",
+    "@fontsource/roboto": "^4.5.8",
     "bootstrap": "^5.3.0-alpha3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.4",
