--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.0.0",
     "@fontsource/fredoka-one": "^4.5.9",
     "@fontsource/roboto": "^4.5.8",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "bootstrap": "^5.3.0-alpha3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.4",
